[package]
name = "automerge-python"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "automerge"
crate-type = ["cdylib"]

[dependencies]
automerge = { path = "../automerge-rs/automerge" }
maplit = "1.0.2"
serde = "1.0"
serde_json = "1.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
