[package]
name = "automerge-python"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "automerge_backend"
crate-type = ["cdylib"]

[dependencies]
automerge = { path = "../automerge-rs/automerge" }
automerge-protocol = { path = "../automerge-rs/automerge-protocol" }
automerge-backend = { path = "../automerge-rs/automerge-backend" }
pythonize = "0.13.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
