[tool.poetry]
name = "automerge-python"
version = "0.0.1"
description = "A python wrapper around the Automerge rust implementation"
authors = ["Alex Good <alex@memoryandthought.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
maturin = "^0.9.0"
mypy = "^0.800"
flake8 = "^3.8.4"
ipython = "^7.20.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin"]
build-backend = "maturin"
