[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "automerge"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.2.0.dev1"

# Optional dependencies for additional features
# Install with: pip install automerge[websocket]
# Or all extras: pip install automerge[all]
[project.optional-dependencies]
websocket = [
    "websockets>=12.0",
]
all = [
    "websockets>=12.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "automerge._automerge"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]
