[package]
name = "automerge"
version = "1.0.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "automerge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
automerge = "0.7.2"
hex = "^0.4.3"
thiserror = "^1.0.16"
