[package]
name = "automerge"
version = "1.0.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "automerge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
automerge = "0.7.0"
hex = "^0.4.3"
thiserror = "^1.0.16"
samod-core = { version = "0.5.1"}
rand = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
